# kroc_scons

./: SConstruct
modules/course/exercises/: q7.occ
modules/course/libsrc/: SConscript
modules/inmoslibs/libsrc/forall/: SConscript
runtime/ccsp/: SConscript
site_scons/site_tools/: occbuild.py  pideps.py
tests/cgtests/: Makefile.am  cgtest93.occ
tools/ilibr/: SConscript
tools/kroc/: SConscript  kroc.in  occbuild.in
tools/occ21/: SConscript
tools/occ21/be/: bind1.c  gen8.c
tools/occ21/fe/: chk1.c  const1.c  syn2.c  vti4.c
tools/occ21/tests/: run_occ21_test.py
tools/occ21/tests/signal/: Makefile.am  counted_array1.occ  counted_array2.occ  mt1.occ  mt10.occ  mt11-int.occ  mt11.occ  mt2.occ  mt3.occ  mt4.occ  mt5.occ  mt6-int.occ  mt6.occ  mt7.occ  mt8.occ  mt9.occ  rename-datatype.occ
tools/tranx86/: SConscript
